syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "CalculateChecksumProto";

package liquibase;

service CalculateChecksumService {
  rpc execute(CalculateChecksumRequest) returns (Response) {}
}

/* Calculates and prints a checksum for the changeset */
message CalculateChecksumRequest {
  string changelog_file = 1; // *required* The root changelog file
  optional string changeset_author = 2; // ChangeSet Author attribute
  optional string changeset_id = 3; // ChangeSet ID attribute
  optional string changeset_identifier = 4; // ChangeSet identifier of form filepath::id::author
  optional string changeset_path = 5; // Changelog path in which the changeSet is included
  optional string default_catalog_name = 6; // The default catalog name to use for the database connection
  optional string default_schema_name = 7; // The default schema name to use for the database connection
  optional string driver = 8; // The JDBC driver class
  optional string driver_properties_file = 9; // The JDBC driver properties file
  optional string password = 10; // Password to use to connect to the database
  string url = 11; // *required* The JDBC database connection URL
  optional string username = 12; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 13;
}

message Response {
  string message = 1;
}
